k8s-deployment/collab-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f provisioning\docker-compose.yml -o k8s-deployment
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: collab-service
  name: collab-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: collab-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f provisioning\docker-compose.yml -o k8s-deployment
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: collab-service
    spec:
      containers:
        - env:
            - name: DB_CLOUD_URI
              valueFrom:
                configMapKeyRef:
                  key: DB_CLOUD_URI
                  name: collab-service-docker-env
            - name: DB_LOCAL_URI
              valueFrom:
                configMapKeyRef:
                  key: DB_LOCAL_URI
                  name: collab-service-docker-env
            - name: ENV
              valueFrom:
                configMapKeyRef:
                  key: ENV
                  name: collab-service-docker-env
            - name: JWT_SECRET
              valueFrom:
                configMapKeyRef:
                  key: JWT_SECRET
                  name: collab-service-docker-env
            - name: PORT
              valueFrom:
                configMapKeyRef:
                  key: PORT
                  name: collab-service-docker-env
            - name: QUESTION_SVC_GATEWAY_URL
              valueFrom:
                configMapKeyRef:
                  key: QUESTION_SVC_GATEWAY_URL
                  name: collab-service-docker-env
            - name: RABBITMQ_LOCAL_URI
              valueFrom:
                configMapKeyRef:
                  key: RABBITMQ_LOCAL_URI
                  name: collab-service-docker-env
            - name: REDIS_LOCAL_URL
              valueFrom:
                configMapKeyRef:
                  key: REDIS_LOCAL_URL
                  name: collab-service-docker-env
          image: collab-service
          imagePullPolicy: Never
          livenessProbe:
            exec:
              command:
                - "wget"
                - "-q"
                - "--spider"
                - "http://localhost:8003/health"
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
          name: collab-service
          ports:
            - containerPort: 8003
              protocol: TCP
      restartPolicy: Always
