k8s-deployment/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f provisioning\docker-compose.yml -o k8s-deployment
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f provisioning\docker-compose.yml -o k8s-deployment
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - env:
            - name: REACT_APP_BASE_URL
              valueFrom:
                configMapKeyRef:
                  key: REACT_APP_BASE_URL
                  name: frontend-docker-env
          image: frontend
          imagePullPolicy: Never
          name: frontend
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: "100m"  # Minimum guaranteed CPU
              memory: "512Mi"  # Minimum guaranteed memory
            limits:
              cpu: "500m"  # Maximum CPU usage
              memory: "2048Mi"  # Maximum memory usage
          volumeMounts:
            - mountPath: /app/public
              name: frontend-cm1
            - mountPath: /app/config
              name: frontend-cm2
      restartPolicy: Always
      volumes:
        - configMap:
            name: frontend-cm1
          name: frontend-cm1
        - configMap:
            name: frontend-cm2
          name: frontend-cm2
