k8s-deployment/mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f provisioning\docker-compose.yml -o k8s-deployment
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: mongo-express
  name: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo-express
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f provisioning\docker-compose.yml -o k8s-deployment
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: mongo-express
    spec:
      containers:
        - env:
            - name: ME_CONFIG_MONGODB_ADMINPASSWORD
              value: password
            - name: ME_CONFIG_MONGODB_ADMINUSERNAME
              value: admin
            - name: ME_CONFIG_MONGODB_PORT
              value: "27017"
            - name: ME_CONFIG_MONGODB_URL
              value: mongodb://admin:password@mongodb:27017/
          image: mongo-express
          name: mongo-express
          ports:
            - containerPort: 8081
              protocol: TCP
      restartPolicy: Always
