k8s-deployment/nginx-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f provisioning\docker-compose.yml -o k8s-deployment
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: nginx-gateway
  name: nginx-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx-gateway
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f provisioning\docker-compose.yml -o k8s-deployment
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: nginx-gateway
    spec:
      containers:
        - env:
            - name: COLLAB_SERVICE_URL
              valueFrom:
                configMapKeyRef:
                  key: COLLAB_SERVICE_URL
                  name: nginx-gateway-env
            - name: MATCHING_SERVICE_URL
              valueFrom:
                configMapKeyRef:
                  key: MATCHING_SERVICE_URL
                  name: nginx-gateway-env
            - name: QUESTION_SERVICE_URL
              valueFrom:
                configMapKeyRef:
                  key: QUESTION_SERVICE_URL
                  name: nginx-gateway-env
            - name: USER_SERVICE_URL
              valueFrom:
                configMapKeyRef:
                  key: USER_SERVICE_URL
                  name: nginx-gateway-env
          image: nginx-gateway
          imagePullPolicy: Never
          livenessProbe:
            exec:
              command:
                - "curl"
                - "-f"
                - "http://localhost:8080/health"
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
          name: nginx-gateway
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
