k8s-deployment/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f provisioning\docker-compose.yml -o k8s-deployment
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f provisioning\docker-compose.yml -o k8s-deployment
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: redis
    spec:
      containers:
        - image: redis:7.4.2-alpine
          livenessProbe:
            exec:
              command:
                - "redis-cli"
                - "ping"
            failureThreshold: 5
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 10
          name: redis
          ports:
            - containerPort: 6379
              protocol: TCP
      restartPolicy: Always
