k8s-deployment/matching-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f provisioning\docker-compose.yml -o k8s-deployment
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: matching-service
  name: matching-service
spec:
  ports:
    - name: "8002"
      port: 8002
      targetPort: 8002
  selector:
    io.kompose.service: matching-service
