k8s-deployment/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f provisioning\docker-compose.yml -o k8s-deployment
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: mongodb
  name: mongodb
spec:
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    io.kompose.service: mongodb
