k8s-deployment/nginx-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f provisioning\docker-compose.yml -o k8s-deployment
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: nginx-gateway
  name: nginx-gateway
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
      nodePort: 30080
  type: NodePort
  selector:
    io.kompose.service: nginx-gateway
