k8s-deployment/redisinsight-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f provisioning\docker-compose.yml -o k8s-deployment
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: redisinsight
  name: redisinsight
spec:
  ports:
    - name: "5540"
      port: 5540
      targetPort: 5540
  selector:
    io.kompose.service: redisinsight
