k8s-deployment/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f provisioning\docker-compose.yml -o k8s-deployment
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: user-service
  name: user-service
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: user-service
